Finished initial support for a proper reference manual (pdf, html, html_single)
git-svn-id: https://svn.apache.org/repos/asf/incubator/jsecurity/trunk@710894 13f79535-47bb-0310-9956-ffa450edef68